# DjangoProbe

./: .gitignore  ENHANCED_MODE.md  IMPLEMENTATION_SUMMARY.md  README.md  blueprint.md  pyproject.toml  report.json  requirements.txt  test.py
ai_tester/: __init__.py  ai_helper.py  app_analyzer.py  app_test_runner.py  cli.py  endpoint_scanner.py  enhanced_test_generator.py  models.py  project_analyzer.py  repo_handler.py  report.py  test_generator.py  test_runner.py
examples/: enhanced_mode_demo.py
