[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "djangoprobe"
version = "0.1.0"
description = "AI-powered Django API test runner"
requires-python = ">=3.10"
dependencies = [
    "typer",
    "rich",
    "gitpython",
]

[project.scripts]
djangoprobe = "ai_tester.cli:app"